--- a/chaosblade/pod-experiment/assets/delete_pod_by_labels.yaml
+++ b/chaosblade/pod-experiment/assets/delete_pod_by_labels.yaml
@@ -11,10 +11,10 @@ spec:
     matchers:
     - name: labels
       value:
-      - "app=httpbin"
+      - "role=master"
     - name: namespace
       value:
-      - "default"
+      - "chaosblade"
     - name: evict-count
       value:
       - "2"
