--- a/chaosblade/pod-experiment/assets/pod_io.yaml
+++ b/chaosblade/pod-experiment/assets/pod_io.yaml
@@ -14,7 +14,7 @@ spec:
       - "app=test"
     - name: namespace
       value:
-      - "test"
+      - "chaosblade"
     - name: method
       value:
       - "read"
