--- a/chaosblade-node-experiment/assets/delay_node_network_by_names.yaml
+++ b/chaosblade-node-experiment/assets/delay_node_network_by_names.yaml
@@ -10,9 +10,9 @@ spec:
     desc: "delay node network loss"
     matchers:
     - name: names
-      value: ["docker20"]
+      value: ["controlplane"]
     - name: interface
-      value: ["ens33"]
+      value: ["ens3"]
     - name: local-port
       value: ["32436"]
     - name: time
