--- a/chaosblade-node-experiment/assets/dns_node_network_by_names.yaml
+++ b/chaosblade-node-experiment/assets/dns_node_network_by_names.yaml
@@ -11,7 +11,7 @@ spec:
     matchers:
     - name: names
       value:
-      - "docker20"
+      - "controlplane"
     - name: domain
       value: ["www.baidu.com"]
     - name: ip
