--- a/chaosblade-node-experiment/assets/kill_node_process_by_names.yaml
+++ b/chaosblade-node-experiment/assets/kill_node_process_by_names.yaml
@@ -10,6 +10,6 @@ spec:
     desc: "kill node process by names"
     matchers:
     - name: names
-      value: ["docker20"]
+      value: ["controlplane"]
     - name: process
       value: ["redis-server"]
