--- a/chaosblade-node-experiment/assets/burn_node_disk_by_names.yaml
+++ b/chaosblade-node-experiment/assets/burn_node_disk_by_names.yaml
@@ -10,7 +10,7 @@ spec:
     desc: "node disk burn"
     matchers:
     - name: names
-      value: ["docker20"]
+      value: ["node01"]
     - name: read
       value: ["true"]
     - name: path
