--- a/chaosblade-node-experiment/assets/fill_node_disk_by_names.yaml
+++ b/chaosblade-node-experiment/assets/fill_node_disk_by_names.yaml
@@ -10,6 +10,6 @@ spec:
     desc: "node disk fill"
     matchers:
     - name: names
-      value: ["controlplane"]
+      value: ["node01"]
     - name: percent
       value: ["80"]
