--- a/chaosblade-node-experiment/assets/loss_node_network_by_names.yaml
+++ b/chaosblade-node-experiment/assets/loss_node_network_by_names.yaml
@@ -10,7 +10,7 @@ spec:
     desc: "node network loss"
     matchers:
     - name: names
-      value: ["controlplane"]
+      value: ["node01"]
     - name: percent
       value: ["100"]
     - name: interface
