--- a/chaosblade-node-experiment/assets/node_cpu_load.yaml
+++ b/chaosblade-node-experiment/assets/node_cpu_load.yaml
@@ -11,7 +11,7 @@ spec:
     matchers:
     - name: names
       value:
-      - "controlplane"
+      - "node01"
     - name: cpu-percent
       value:
       - "60"
