--- a/chaosblade-node-experiment/assets/stop_node_process_by_names.yaml
+++ b/chaosblade-node-experiment/assets/stop_node_process_by_names.yaml
@@ -10,6 +10,6 @@ spec:
     desc: "kill node process by names"
     matchers:
     - name: names
-      value: ["controlplane"]
+      value: ["node01"]
     - name: process
       value: ["redis-server"]
